--- a/TASK-2(UnSupervised Machine Learning).ipynb
+++ b/TASK-2(UnSupervised Machine Learning).ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### From the  ‘Iris’ dataset, we are going to predict the optimum number of clusters and represent it visually.\n",
-    "Dataset : https://drive.google.com/file/d/11Iq7YvbWZbt8VXjfm06brx66b10YiwK-/view?usp=sharing\n"
+    "Dataset : https://drive.google.com/file/d/11Iq7YvbWZbt8VXjfm06brx66b10YiwK-/view?usp=sharing\n We use KMeans Clustering"
    ]
   },
   {
